--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.env
 config/config.env
+
+# Logs
+*.log
+
+# Terraform
+*.tfstate
+*.tfstate.backup
+.terraform/
+terraform/terraform-sa-key.json
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# OS/System files
+.DS_Store
+Thumbs.db
+
+# Environment or temp files
+*.swp
+.idea/
+*.bak
