--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ config/config.env
 terraform/terraform-sa-key.json
 terraform/.terraform/
 terraform/.terraform.lock.hcl
+*.tfvars
 
 # VS Code
 .vscode/
