got mongodb connected in a local container, also pushed to artifacts manager

--- a/.dockerignore
+++ b/.dockerignore
@@ -26,3 +26,14 @@ coverage
 
 #Google cloud
 *key.json
+
+# Terraform
+
+terraform
+*.tf
+*.tfstate
+*.tfstate.*
+*.tfvars
+*.backup
+*.log
+/terraform
