--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app",
-    "postinstall": "node ./scripts/post-install.js"
+    "dev": "cross-env NODE_ENV=development nodemon app"
   },
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^4.0.4",
@@ -19,6 +18,7 @@
     "fs-extra": "^9.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
+    "mongodb": "^6.16.0",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
